--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+astropy==6.0.1
+astropy-iers-data==0.2025.2.10.0.33.26
 bcrypt==4.2.0
 certifi==2024.8.30
 click==8.1.7
 dnspython==2.7.0
+docstring_parser==0.16
 email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.2
 fastapi-cli==0.0.5
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
+h5py==3.12.1
 httpcore==1.0.6
 httptools==0.6.4
 httpx==0.27.2
@@ -20,21 +25,30 @@ Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==1.26.4
+packaging==24.2
 passlib==1.7.4
+pkg_resources==0.0.0
 psycopg2==2.9.10
 pydantic==2.9.2
 pydantic-settings==2.7.1
 pydantic_core==2.23.4
+pyerfa==2.0.1.5
 Pygments==2.18.0
 PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
+pyuvdata==2.4.3
 PyYAML==6.0.2
 rich==13.9.2
+scipy==1.13.1
+setuptools-scm==8.1.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==1.4.0
 starlette==0.40.0
+tomli==2.2.1
 typer==0.12.5
 typing_extensions==4.12.2
 uvicorn==0.32.0
