fixed gunicorn service file

--- a/gunicorn.service
+++ b/gunicorn.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=demo fastapi application
+Description= Demoing fastapi backend app
 After=network.target
 
 [Service]
@@ -7,7 +7,6 @@ User=rey
 Group=rey
 WorkingDirectory=/home/rey/fastapi/src/
 Environment="PATH=/home/rey/fastapi/venv/bin"
-EnvironmentFile=/home/sanjeev/.env
 ExecStart=/home/rey/fastapi/venv/bin/gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
 
 [Install]
