--- a/gunicorn.service
+++ b/gunicorn.service
@@ -7,6 +7,7 @@ User=rey
 Group=rey
 WorkingDirectory=/home/rey/fastapi/src/
 Environment="PATH=/home/rey/fastapi/venv/bin"
+EnvironmentFile=/home/rey/.env
 ExecStart=/home/rey/fastapi/venv/bin/gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
 
 [Install]
